objects/test_Scheduler__e.object
<CustomObject>
    <fields>
        <fullName>Call_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadIds__c</fullName>
        <label>LeadIds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadWhoId__c</fullName>
        <label>LeadWhoId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <label>test Scheduler</label>
    <pluralLabel>test Scheduler</pluralLabel>
</CustomObject>